--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "jspdf": "^3.0.4",
     "keycloak-js": "^26.2.1",
     "konva": "^10.0.12",
     "react": "^19.2.0",
