--- a/ml-server/requirements.txt
+++ b/ml-server/requirements.txt
@@ -3,11 +3,6 @@ uvicorn[standard]==0.32.1
 python-multipart==0.0.20
 pydantic==2.10.6
 pillow==11.1.0
-numpy==2.2.1
-
-# For future ML model integration
-# torch==2.5.1
-# torchvision==0.20.1
-# tensorflow==2.18.0
-# scikit-learn==1.6.1
-# opencv-python==4.10.0.84
+numpy<2.1.0,>=1.26.0
+tensorflow==2.18.0
+requests==2.32.3
